# src/main/java/com/personal/tournament_api/match/domain/ports/MatchRepository.java
@@ -1,6 +1,9 @@
 package com.personal.tournament_api.match.domain.ports;
 
 import com.personal.tournament_api.match.domain.model.Match;
+import com.personal.tournament_api.match.domain.model.MatchSearchCriteria;
+import com.personal.tournament_api.match.domain.model.Page;
+import com.personal.tournament_api.match.domain.model.PageRequest;
 
 import java.util.List;
 import java.util.Optional;
@@ -14,6 +17,8 @@ public interface MatchRepository {
     List<Match> findAllByTournamentId(Long tournamentId);
 
     List<Match> findAllByTeamId(Long teamId);
+
+    Page<Match> findByTournamentIdWithFilters(Long tournamentId, MatchSearchCriteria criteria, PageRequest pageRequest);
 
     void deleteById(Long id);
 
